@@ -1,0 +1,63 @@
+<p>Picasa had been banned in Mainland China yesterday. I don&#39;t know if it is temporary or persistent. Lots of pictures on my blog are stored in Picasa. Unlike Flickr, I found it difficult to replace domain name or IP to pass the URL/IP filter. So I choose another way: download pictures from Picasa server to my Godaddy host, and replace the picture links in my posts from Picasa to my host. I wrote Imagoxy, a tiny PHP toolkit and Imagoxy-WP, a wordpress plug-in to implement this automatically and dynamically. This mechanism will certainly apply additional overhead and occupy more bandwidth. However, it is sustainable for my small website. Experiment shows it works well with wordpress 2.8.1. I make it open-source under a BSD license and you can get it from <a href="https://sourceforge.net/projects/imagoxy/">https://sourceforge.net/projects/imagoxy/</a>.</p>
+<p>Security issues should be considered carefully before it being used in significant applications. Some measures had been taken, but I hope you to review my codes and eliminate the hidden dangers. If you are interested in Imagoxy, welcome to join the small project at SourceForge and contribute your codes! Thanks. :)</p>
+
+<p style="color: #FF0000;">Imagoxy Version 0.53 - Update: 2009/12/10<br />Imagoxy-WP Version 0.53 - Update: 2009/12/10</p>
+
+<p style="color: #FF0000;">More conveniently, you can get all files of the newest version from the <a href="http://imagoxy.svn.sourceforge.net/viewvc/imagoxy/">SVN web</a> (click &#39;Download GNU tarball&#39;).</p>
+
+<p><strong>Imagoxy</strong></p>
+
+<blockquote>
+	Imagoxy (&quot;image proxy&quot;) is a tiny PHP toolkit. It downloads pictures from remote server to local server and relocate corresponding http requests to the local one. It is used to access pictures when the remote server is banned or slow from the network of clients (e.g. Download pictures from Picasa on an unbanned US server and tranfer them to China&#39;s viewers where Picasa is banned sometimes).<br />
+	<br />
+	Licensed under a BSD license.<br />
+	<br />
+	Install:<br />
+	<br />
+	1. Modify Imagoxy &#39;getimg.php&#39; file:<br />
+	* Set &#39;$work_dir&#39; to the location you wish Imagoxy works at.<br />
+	* Set &#39;$cache_dir&#39; to the location you wish files downloaded to. (default is OK in most cases)<br />
+	* Set &#39;$error_file&#39; as the file relocated to when access control denied. (default is OK in most cases)<br />
+	* Set &#39;$reffer_list&#39; as the legal HTTP_REFERER prefix list.<br />
+	* Set &#39;$check_reffer_before_download&#39; as whether to check HTTP_REFERER before downloading new picutre.<br />
+	* Set &#39;$check_reffer_before_show&#39; as whether to check HTTP_REFERER before showing downloaded picutre.<br />
+	* Set &#39;$legal_pattern&#39; as the legal file URL patterns. (default is for Picasa; you can add more)<br />
+	2. Update the &#39;imagoxy&#39; directory to your &#39;$work_dir&#39; and make the &#39;$cache_dir&#39; writable.<br />
+	3. Configure and deploy Imagoxy front-ends such as Imagoxy-WP.<br />
+	<br />
+	Usage:<br />
+	<br />
+	1. [ http://www.example.com/imagoxy/getimg.php?s={original URL} ] In this format (we called &#39;Imagoxy URL&#39;), the http request will be relocated to a file on local server which is downloaded from the original URL. You can embed the Imagoxy URL into your &lt;img src=&quot;...&quot;&gt; label. &#39;http://&#39; in original URL is omissible and the other protocols are not allowed. Notice: as a parameter, original URL should be url-encoded again even if it has been url-encoded. e.g. &#39;Pic%20A.jpg&#39; -&gt; &#39;Pic%2520A.jpg&#39;.<br />
+	2. [ http://www.example.com/imagoxy/getimg.php?u={encoded URL} ] Also does downloading and relocation. However, you should base64-encode, reverse and then url-encode the original URL. In PHP, these are done by &#39;urlencode(strrev(base64_encode($original_url)))&#39;. This encoding method can pass the URL filter in certain regions.<br />
+	<br />
+	Test:<br />
+	<br />
+	You can write a html page with an Imagoxy URL in &lt;img src=&quot;...&quot;&gt; label. Open it locally, you should see the &#39;$error_file&#39;; after uploading it to the server with the URL prefix in &#39;$reffer_list&#39;, you will see the relocated picture correctly.<br />
+	<br />
+	Enjoy it!<br />
+</blockquote>
+
+<p><strong>Imagoxy-WP</strong></p>
+
+<blockquote>
+	Imagoxy-WP is a wordpress front-end for Imagoxy. Imagoxy downloads pictures from remote server to local server and relocate corresponding http requests to the local one. It is used to access pictures when the remote server is banned or slow from the network of clients. Imagoxy-WP now converts Picasa URLs to local Imagoxy URLs, and you can also add your customed conversion.<br />
+	<br />
+	Licensed under a BSD license.<br />
+	<br />
+	Install:<br />
+	<br />
+	1. Download Imagoxy. Imagoxy is available at https://sourceforge.net/projects/imagoxy/.<br />
+	2. Configure and deploy Imagoxy on your server as Imagoxy&#39;s README file described.<br />
+	3. Modify Imagoxy-WP &#39;imagoxy-wp.php&#39; file:<br />
+	* Set &#39;$imagoxy_dir&#39; to your Imagoxy location, which is the same as &#39;$work_dir&#39; in Imagoxy.<br />
+	4. Upload Imagoxy-WP php file or the whole directory to your wordpress &#39;/wp-content/plugins&#39; directory.<br />
+	5. Enable it in the dashboard.<br />
+	<br />
+	After that, You will see:<br />
+	&lt;img src=&quot;http://lhX.ggpht.com/_WWW/XXX/YYY/ZZZ/sMMM/IMG_NNN.JPG&quot; /&gt;<br />
+	in your blog posts now becomes:<br />
+	&lt;img src=&quot;http://www.example.com/imagoxy/getimg.php?u=AABBCCDDEEFFGGHH&quot; /&gt;<br />
+	Since pictures are downloaded from your own server, it won&#39;t be banned then.<br />
+	<br />
+	Enjoy it!
+</blockquote>
