@@ -1,7 +1,7 @@
 <?php
 
 /**
- * Imagoxy 0.52 / 2009-07-31
+ * Imagoxy 0.53 / 2009-12-10
  * 
  * Imagoxy is a tiny PHP toolkit. It downloads pictures from remote server to local server and relocate
  * corresponding http requests to the local one. It is used to access pictures when the remote server 
@@ -30,7 +30,8 @@
 	// Whether to check HTTP_REFERER before showing downloaded picutre.
 	$check_reffer_before_show = false;
 	// Legal file URL patterns (regular expression). They meet 'OR' logic.
-	$legal_pattern = array('http://.*\.ggpht\.com/.*\.(png|jpe|jpeg|jpg|gif|bmp|ico|tiff|tif|svg|svgz)(\?.*)?$');
+	$legal_pattern = array('http://.*\.ggpht\.com/.*\.(png|jpe|jpeg|jpg|gif|bmp|ico|tiff|tif|svg|svgz)(\?.*)?$',
+		'http://.*\.static\.flickr\.com/.*\.(png|jpe|jpeg|jpg|gif|bmp|ico|tiff|tif|svg|svgz)(\?.*)?$');
 
 	// ======== Access control ========
 	
