@@ -1,5 +1,13 @@
-README for Imagoxy 0.53
-==============================
+=== imagoxy ===
+
+Contributors: Jian Lin
+Donate link: http://www.linjian.org/donate/
+Tags: images, Picasa, Flickr, GFW
+Requires at least: 2.0.0
+Tested up to: 2.8.9
+Stable tag: 0.53
+
+== README for Imagoxy 0.53 ==
 
 Imagoxy ("image proxy") is a tiny PHP toolkit. It downloads pictures from remote server to local server and relocate corresponding http requests to the local one. It is used to access pictures when the remote server is banned or slow from the network of clients (e.g. Download pictures from Picasa on an unbanned US server and tranfer them to China's viewers where Picasa is banned sometimes).
 
@@ -29,7 +37,7 @@ You can write a html page with an Imagoxy URL in <img src="..."> label. Open it 
 
 Example:
 
-I have a picture named "火车   测试-+=_  [.a.] 图片  pic.JPG" (encoded in zh_CN.utf_8) on Picasa:
+I have a picture named "U+706BU+8F66   U+6D4BU+8BD5-+=_  [.a.] U+56FEU+7247  pic.JPG" (encoded in zh_CN.utf_8) on Picasa:
 
 	* Normal Picasa URL:
 	http://lh5.ggpht.com/_ZQ_-T1yEBQY/SmQSOX5_xFI/AAAAAAAABPY/h8Tw6PWuZP8/%E7%81%AB%E8%BD%A6%20%20%20%E6%B5%8B%E8%AF%95-%2B%3D_%20%20%5B.a.%5D%20%E5%9B%BE%E7%89%87%20%20pic.JPG
@@ -48,6 +56,32 @@ I have a picture named "火车   测试-+=_  [.a.] 图片  pic.JPG" (encoded in 
 
 	* Imagoxy URL (parameter 'u') with query string "imgmax":
 	http://www.example.com/imagoxy/getimg.php?u=wAjM9gXYtdWbp9zRQpkLjlGcwITJwITJ3gTJ5gTJ3UUJFJUJClTJ1UUJwITJEVTJuEmLCVTJwITJwITJfR0MlIkMl0SN5UiRBVCOFViQ4USNCViNFVCMyUCMyUCMyUiNBVCRCVCOFViQBVSM4UyNFVyL4AlW1dFU2cHV4g2LZBlQBFUQBFUQBF0LJZEefVDWPNVUtN1LZFlQFlXMU1yXRp1Xv02bj5CdoB3Zn5SNox2LvoDc0RHa
+
+Enjoy it!
+
+Jian Lin <lj@linjian.org>
+2009-12-10
+
+== README for Imagoxy-WP 0.53 ==
+
+Imagoxy-WP is a wordpress front-end for Imagoxy. Imagoxy downloads pictures from remote server to local server and relocate corresponding http requests to the local one. It is used to access pictures when the remote server is banned or slow from the network of clients. Imagoxy-WP now converts Picasa and Flickr URLs to local Imagoxy URLs, and you can also add your customed conversion.
+
+Licensed under a BSD license.
+
+Install:
+
+1. Download Imagoxy. Imagoxy is available at https://sourceforge.net/projects/imagoxy/.
+2. Configure and deploy Imagoxy on your server as Imagoxy's README file described.
+3. Modify Imagoxy-WP 'imagoxy-wp.php' file:
+	* Set '$imagoxy_dir' to your Imagoxy location, which is the same as '$work_dir' in Imagoxy.
+4. Upload Imagoxy-WP php file or the whole directory to your wordpress '/wp-content/plugins' directory.
+5. Enable it in the dashboard.
+
+After that, You will see:
+	<img src="http://lhX.ggpht.com/_WWW/XXX/YYY/ZZZ/sMMM/IMG_NNN.JPG" />
+in your blog posts now becomes:
+	<img src="http://www.example.com/imagoxy/getimg.php?u=AABBCCDDEEFFGGHH" />
+Since pictures are downloaded from your own server, it won't be banned then.
 
 Enjoy it!
 
